tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__DiphenylIsophtal-AAAAAAAAAAAAAAAAAAAGog==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1698,
  "prerequisites": [
    1699,
    1700
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mix Sulfuric Acid, Phthalic acid and Phenol to get Diphenyl Isophtalate. An IV Chemical Reactor is needed.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lDiphenyl Isophtalate",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1699,
    1700
  ],
  "rewards": [],
  "tasks": []
}
