tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__EvenBettererMagn-AAAAAAAAAAAAAAAAAAALZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2918,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Like before, you're going to need better rods for your motors next tier. Build this to make your Magnetic Samarium Rods.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lEven Betterer Magnetic Rods",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
