tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__FinallySamarium-AAAAAAAAAAAAAAAAAAAMEA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3088,
  "prerequisites": [
    3086
  ],
  "properties": {
    "auto_claim": false,
    "desc": "(And Gadolinium)\n\nEasy, right? Not to worry, there's always the bastnasite line to stay your hunger for complex lines!\n\nSamarium can be used to fuel your ever growing Magnetic Samarium Rods needs from LuV up to UHV while Gadolinium is used in the far lategame in the making of powerful Compact Fusion reactors.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lFinally, Samarium!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3086
  ],
  "rewards": [],
  "tasks": []
}
